objects/AddressStandardizationMappings__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Address Line 1 Tag Name</description>
        <inlineHelpText>Address Line 1 Tag Name</inlineHelpText>
        <label>Address Line 1</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Address Line 2</description>
        <inlineHelpText>Address Line 2 Tag Name</inlineHelpText>
        <label>Address Line 2</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>City Tag Name</inlineHelpText>
        <label>City</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country Tag Name</inlineHelpText>
        <label>Country</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPSCode__c</fullName>
        <description>FIPS Code</description>
        <inlineHelpText>FIPS Code Tag Name</inlineHelpText>
        <label>FIPS Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude</description>
        <inlineHelpText>LatitudeTag Name</inlineHelpText>
        <label>Latitude</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <description>Modified</description>
        <inlineHelpText>Modified Tag Name</inlineHelpText>
        <label>Modified</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NativeVendorError__c</fullName>
        <description>Native Vendor Error</description>
        <inlineHelpText>Native Vendor Error Tag Name</inlineHelpText>
        <label>Native Vendor Error</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <inlineHelpText>State Tag Name</inlineHelpText>
        <label>State</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip4__c</fullName>
        <description>Zip 4</description>
        <inlineHelpText>Zip 4 Tag Name</inlineHelpText>
        <label>Zip 4</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>Zip Code</description>
        <inlineHelpText>Zip Code Tag Name</inlineHelpText>
        <label>Zip Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>